# lic-assistant

./: .gitignore  README.md  app.py  fetch_docs.py  generate_evaluation_dataset.py  main_ingest.py  pyproject.toml  requirements.txt  run_evaluation.py
config/: rag_config.yaml
evaluation/: evaluation_dataset_prompt.py  evaluation_prompt.py
src/embeddings/: embedder.py
src/ingestion/: chunk_builder.py  ingest_service.py  pdf_blocks.py
src/llm/: llm_client.py
src/models/: metadata.py
src/prompts/: system_prompt.py
src/rag/: answer_generator.py  rag_chain.py
src/retrieval/: retriever.py
src/utils/: checksum.py  config_loader.py  logger.py
src/vectorstore/: pgvector_store.py
